css/main.css
body{
    font-family: 'Source Code Pro', monospace;

}

#landing {
    position: relative;
    background-color: rgb(255, 255, 255);
    height: 100vh;
    min-height: 25rem;
    width: 100%;
    overflow: hidden;
    text-shadow: 1px 1px 8px rgb(235, 76, 8)
  }
  
  #landing video {
    position: absolute;
    top: 50%;
    left: 50%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
    z-index: 0;
    -ms-transform: translateX(-50%) translateY(-50%);
    -moz-transform: translateX(-50%) translateY(-50%);
    -webkit-transform: translateX(-50%) translateY(-50%);
    transform: translateX(-50%) translateY(-50%);
  }
  
  #landing .container {
    position: relative;
    z-index: 2;
  }
  
  #landing .overlay {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: black;
    opacity: 0.5;
    z-index: 1;
  }

  #projects {
    background-image: url(../bg/projects-3-bg.jpg);
    background-attachment: fixed;
  }
.full-screen{
  height: 100vh;

}

 .text-small{
font-size: small;
 }

 .zoom {
  transition: transform .5s; /* Animation */
  margin: 0 auto;
}

.zoom:hover {
  transform: scale(1.1); 
  
  
  /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
  /*transform: rotateY(180deg);
  transform-style: preserve-3d;
  perspective: 1000px;*/
}

.transparent {
  opacity: 0.7;
}

.neon {
  box-shadow: 1px 1px 2px black, 0 0 95px rgb(248, 246, 246), 0 0 10px rgb(154, 5, 241);
}

.rotate5{
  transform: rotateZ(30deg);
  z-index: -1;
}

.grad1 {
  background-image: linear-gradient(white,#e7b633, rgb(111, 235, 235));
}

.grad2{
  background-image: linear-gradient(rgb(111, 235, 235),rgb(255, 208, 0), rgb(31, 168, 202), rgba(0, 0, 0, 0.904));

}
  
.flip-box {
  background-color: transparent;
  width: 300px;
  height: 200px;
  border: 1px solid #f1f1f1;
  perspective: 1000px; /* Remove this if you don't want the 3D effect */
}

/* This container is needed to position the front and back side */
.flip-box-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}

/* Do an horizontal flip when you move the mouse over the flip box container */
.flip-box:hover .flip-box-inner {
  transform: rotateY(180deg);
}

/* Position the front and back side */
.flip-box-front, .flip-box-back {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden; /* Safari */
  backface-visibility: hidden;
}

/* Style the front side */
.flip-box-front {
  background-color: #bbb;
  color: black;
}

/* Style the back side */
.flip-box-back {
  background-color: dodgerblue;
  color: white;
  transform: rotateY(180deg);
}
  /*@media (pointer: coarse) and (hover: none) {
    header {
      background: url('https://source.unsplash.com/XT5OInaElMw/1600x900') black no-repeat center center scroll;
    }
    header video {
      display: none;
    }
  }*/

